--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ html body {
   width: 100%;
   height: auto;
   position: relative;
+  overflow-x: hidden;
 }
 html body header {
   width: 100%;
@@ -196,11 +197,11 @@ html body main .bonusPoint .bonusPoint__nums li.active::after {
           box-shadow: 0px 0px 25px 2px #f19483;
   border-bottom: solid 10px #ffffff;
   content: "";
-  width: 70%;
+  width: 75%;
   height: auto;
   position: absolute;
   bottom: -5px;
-  left: 55%;
+  left: 53%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   -webkit-animation: delayFlash 4s linear, flash 0.8s ease-in-out 4s 10;
