--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -21,4 +21,56 @@ header {
             transform: translateX(-20px);
         }
     }
+
+    .style_Picker {
+        width: auto;
+        height: 42px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 0;
+        right: 20px;
+
+        &>li {
+            width: 30px;
+            height: 30px;
+            border-radius: 50px;
+            border: 1px solid transparent;
+            overflow: hidden;
+            margin: 0 5px 0 0;
+
+            &.active {
+                border-color: #e3aa57;
+            }
+
+            &>a {
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                text-decoration: none;
+                text-align: center;
+                color: lightcyan;
+                padding: 5px;
+
+                &.gold_Red {
+                    background: linear-gradient(to right, #c59248 0%, #a30220 100%);
+                }
+
+                &.universe {
+                    background: linear-gradient(to right, #ab65bb 0%, #1f2a52 100%);
+                }
+
+                &.px {
+                    background: linear-gradient(to right, #ff00ff 0%, #00ffff 100%);
+                }
+
+                &.ball {
+                    background: #be0000;
+                }
+            }
+        }
+    }
 }
