--- a/css/style.css
+++ b/css/style.css
@@ -101,16 +101,16 @@ html body header .style_Picker {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   position: absolute;
   top: 0;
   right: 20px;
 }
-html body header .style_Picker > li {
+html body header .style_Picker li {
   width: 30px;
   height: 30px;
   border-radius: 50px;
@@ -118,40 +118,38 @@ html body header .style_Picker > li {
   overflow: hidden;
   margin: 0 5px 0 0;
 }
-html body header .style_Picker > li.active {
-  border-color: #e3aa57;
-}
-html body header .style_Picker > li > a {
+html body header .style_Picker li a {
   width: 100%;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   text-decoration: none;
   text-align: center;
   color: lightcyan;
   padding: 5px;
 }
-html body header .style_Picker > li > a.gold_Red {
+html body header .style_Picker li a.gold_Red {
   background: -webkit-gradient(linear, left top, right top, from(#c59248), to(#a30220));
   background: linear-gradient(to right, #c59248 0%, #a30220 100%);
 }
-html body header .style_Picker > li > a.universe {
+html body header .style_Picker li a.universe {
   background: -webkit-gradient(linear, left top, right top, from(#ab65bb), to(#1f2a52));
   background: linear-gradient(to right, #ab65bb 0%, #1f2a52 100%);
 }
-html body header .style_Picker > li > a.px {
+html body header .style_Picker li a.px {
   background: -webkit-gradient(linear, left top, right top, from(#ff00ff), to(#00ffff));
   background: linear-gradient(to right, #ff00ff 0%, #00ffff 100%);
 }
-html body header .style_Picker > li > a.ball {
-  background: #be0000;
+html body header .style_Picker li a.ball {
+  background: -webkit-gradient(linear, left top, right top, from(#a37125), to(#8c0000));
+  background: linear-gradient(to right, #a37125 0%, #8c0000 100%);
 }
 html body main {
   width: 100%;
